# xapian

./: bootstrap
xapian-bindings/: configure.ac
xapian-bindings/java/: Makefile.am  SmokeTest.java  java.i  pom.xml
xapian-bindings/java/xapian-core/: pom.xml
xapian-bindings/java/xapian-core/src/main/java/org/xapian/util/: LoaderUtils.java
xapian-bindings/java/xapian-core/src/test/java/unit/: SmokeTest.java
xapian-bindings/ocaml/: .gitignore  Makefile  Makefile.am  notes  ocaml.i  smoketest.ml  util.i  xapianinit
xapian-core/: Makefile.am
xapian-core/api/: Makefile.mk  extended_edit_distance.h  omdatabase.cc  spelling_base.h  spelling_corrector.cc  spelling_corrector.h  spelling_keyboard.cc  spelling_keyboard.h  spelling_keyboard_layouts.h  spelling_phonetic.h  spelling_phonetic_dmsoundex.cc  spelling_phonetic_dmsoundex.h  spelling_phonetic_metaphone.cc  spelling_phonetic_metaphone.h  spelling_splitter.cc  spelling_splitter.h  spelling_transliteration.cc  spelling_transliteration.h
xapian-core/backends/: database.cc
xapian-core/backends/brass/: Makefile.mk  brass_database.cc  brass_database.h  brass_databasereplicator.cc  brass_databasereplicator.h  brass_replicate_internal.h  brass_spelling.cc  brass_spelling.h  brass_spelling_fastss.cc  brass_spelling_fastss.h  brass_spelling_new.cc  brass_spelling_new.h  brass_spelling_ngram.cc  brass_spelling_ngram.h  brass_spellingwordslist.cc  brass_spellingwordslist.h  brass_table.cc  brass_table.h
xapian-core/backends/chert/: chert_database.h
xapian-core/backends/flint/: flint_database.h
xapian-core/common/: Makefile.mk  const_database_wrapper.h  database.h  remote-database.h  str.h  unordered_map.h  unordered_set.h  zlib_utils.cc  zlib_utils.h
xapian-core/docs/: Makefile.am  Makefile.sphinx  admin_notes.rst  bm25.html.rst  bm25.rst  collapsing.rst  deprecation.rst  facets.rst  index.rst  install.rst  intro_ir.html.rst  overview.html.rst  overview.rst  queryparser.rst  quickstart.html.rst  quickstart.rst  quickstartsearch.cc.rst  remote.html.rst  remote.rst  remote_protocol.html  replication_protocol.rst  scalability.html.rst  serialisation.rst  sorting.rst  spelling.rst  sphinx.am  stemming.rst  synonyms.rst  termgenerator.rst  valueranges.rst
xapian-core/docs/source/: code_structure.rst  conf.py  index.rst  install.rst  internals.rst  intro_ir.rst  postingsource.rst  quickstart.rst  quickstartexpand.cc.rst  quickstartindex.cc.rst  replication.rst  replication_protocol.rst  scalability.rst  spelling.rst  stemming.rst
xapian-core/include/xapian/: database.h  language_autodetect.h  queryparser.h  termgenerator.h  types.h  unicode.h  unordered_map.h  unordered_set.h
xapian-core/languages/: Makefile.mk  language_autodetect.cc  language_autodetect.h
xapian-core/languages/classification/: README  chinese.lm  japanese.lm  languages  polish.lm  russian.lm  spanish.lm
xapian-core/languages/transliteration/: README  arabic.tr  chinese.tr  hebrew.tr  japanese.tr  languages  russian.tr
xapian-core/queryparser/: queryparser.cc  queryparser.lemony  queryparser_internal.h  termgenerator.cc  termgenerator_internal.cc  termgenerator_internal.h
xapian-core/spelling/: Makefile.mk  dir_contents  extended_edit_distance.cc  extended_edit_distance.h  phonetic.cc  phonetic.h  spelling_base.cc  spelling_base.h  spelling_corrector.cc  spelling_corrector.h  spelling_keyboard.cc  spelling_keyboard.h  spelling_keyboard_layouts.h  spelling_phonetic.cc  spelling_phonetic.h  spelling_phonetic_dmsoundex.cc  spelling_phonetic_dmsoundex.h  spelling_phonetic_metaphone.cc  spelling_phonetic_metaphone.h  spelling_splitter.cc  spelling_splitter.h  spelling_splitter_new.cc  spelling_splitter_new.h  spelling_transliteration.cc  spelling_transliteration.h  spelling_transliteration_alphabets.h
xapian-core/tests/: Makefile.am  api_query.cc  api_spelling.cc  queryparsertest.cc
xapian-core/tests/perftest/: Makefile.mk  perftest_spelling.cc  perftest_spelling.h
xapian-core/tests/testdata/: dict.txt
